resources/notes/exam_reports/exam report 12/2-0-max.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r7p35.42.us.org
Darwin 17.4.0 x86_64
$> date
Tue Jul 23 10:15:10 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190723/lusanche

= Git history ==================================================================
$> git -C /var/folders/rs/475hnn9x6sz3b193lwwrxh8m0000gp/T/tmpaNOez9/user log --pretty='%H - %an, %ad : %s'
7de4c94f09f93ae0f782add16b0defdf0066f9c7 - Exam 42, Tue Jul 23 10:14:47 2019 -0700 : max
0f18aae524ef4f35d26320a1a342e164ccb8e79c - Exam 42, Tue Jul 23 09:18:35 2019 -0700 : ulstr
a1425d5755e22dc38a4a962daecd5e902ac14bba - Exam 42, Tue Jul 23 09:09:13 2019 -0700 : hello
 
= Collected files ==========================================
$> ls -lAR /var/folders/rs/475hnn9x6sz3b193lwwrxh8m0000gp/T/tmpaNOez9/user
total 8
-rw-r--r--  1 deepthought  deepthought  671 Jul 23 10:15 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Jul 23 10:15 hello
drwxr-xr-x  3 deepthought  deepthought  102 Jul 23 10:15 max
drwxr-xr-x  3 deepthought  deepthought  102 Jul 23 10:15 ulstr

/var/folders/rs/475hnn9x6sz3b193lwwrxh8m0000gp/T/tmpaNOez9/user/hello:
total 8
-rw-r--r--  1 deepthought  deepthought  979 Jul 23 10:15 hello.c

/var/folders/rs/475hnn9x6sz3b193lwwrxh8m0000gp/T/tmpaNOez9/user/max:
total 8
-rw-r--r--  1 deepthought  deepthought  1267 Jul 23 10:15 max.c

/var/folders/rs/475hnn9x6sz3b193lwwrxh8m0000gp/T/tmpaNOez9/user/ulstr:
total 8
-rw-r--r--  1 deepthought  deepthought  1200 Jul 23 10:15 ulstr.c
 
= max ==========================================================================
$> gcc -Wextra -Wall -Werror main.c max.c -o user_exe 
max.c:20:13: error: use of undeclared identifier 'NULL'
        if (tab == NULL)
                   ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
